@@ -3,6 +3,7 @@ Changelog
 
 1.7 - (unreleased)
 -----------------
+ * Change: Fix the ims_timeline view [tiberich #3071]
  * Change: Show member fullname and workflow state title in @@ims_overview [tiberich #3071]
  * Bug fix: Now "relatedItems" values are kept when creating a
      new Specification version [ghicaale #3582]
